# PiP

./: Makefile  README.md  RELEASE_NOTE  configure  configure.ac
.github/workflows/: docker.pip-glibc-libpip.invoke.yml  docker.pip-glibc-libpip.yml  rpm.build.sh  rpm.process-in-process.invoke.yml  rpm.process-in-process.yml  rpm.source.sh  test.invoke.yml  test.sh  test.yml  update.yml
doc/: Author-html.md  Author-md.md  Author.md  Makefile  README-html.doxy  README-html.md  README-man.doxy  README-man.md  README.md  README.md.in  commands.in  config-common-test.doxy  config-common.doxy  config-common.doxy.in  config-man1c.doxy  config-man3.doxy  config-man7.doxy  markdown.sh
doc/html/: dir_1012222966f62c486e538e418fd3c32c.html  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  group__PiP-0-init-fin.html  group__PiP-2-export.html  group__PiP-5-exit.html  group__PiP-API0-init-fin.html  group__PiP-API0-init-fin.js  group__PiP-API1-spawn.html  group__PiP-API1-spawn.js  group__PiP-API2-export.html  group__PiP-API2-export.js  group__PiP-API3-wait.html  group__PiP-API3-wait.js  group__PiP-API4-query.html  group__PiP-API4-query.js  group__PiP-API5-exit.html  group__PiP-API5-exit.js  group__PiP-API6-sync.html  group__PiP-API6-sync.js  group__PiP-Commands.html  group__PiP-Commands.js  group__pip-check.html  group__pip-exec.html  group__pip-man.html  group__pip-mode.html  group__pip-tgkill.html  group__pip__abort.html  group__pip__abort.js  group__pip__barrier__fin.html  group__pip__barrier__fin.js  group__pip__barrier__init.html  group__pip__barrier__init.js  group__pip__barrier__wait.html  group__pip__barrier__wait.js  group__pip__exit.html  group__pip__exit.js  group__pip__export.html  group__pip__export.js  (+80 more)
doc/html/search/: all_1.js  all_70.js  functions_0.js  functions_70.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js
doc/latex-inuse/: Makefile  libpip-manpages.tex  libpip-manpages.tex.in  man-pages.sh
doc/man/: index.bt
doc/man/man1/: PiP-Commands.1  pip-check.1  pip-exec.1  pip-man.1  pip-mode.1  pip-tgkill.1  pipcc.1  pipfc.1  pips.1  printpipmode.1
doc/man/man3/: PiP-0-init-fin.3  PiP-1-spawn.3  PiP-2-export.3  PiP-3-wait.3  PiP-4-query.3  PiP-5-exit.3  PiP-6-signal.3  PiP-7-sync.3  PiP-API0-init-fin.3  PiP-API1-spawn.3  PiP-API2-export.3  PiP-API3-wait.3  PiP-API4-query.3  PiP-API5-exit.3  PiP-API6-sync.3  ULP-0-yield.3  ULP-1-task-queue.3  ULP-2-suspension.3  ULP-3-misc.3  ULP-4-barrier.3  ULP-5-mutex.3  ULP-6-coupling.3  pip_abort.3  pip_barrier_fin.3  pip_barrier_init.3  pip_barrier_wait.3  pip_exit.3  pip_export.3  pip_fin.3  pip_get_aux.3  pip_get_mode.3  pip_get_mode_str.3  pip_get_ntasks.3  pip_get_pipid.3  pip_get_system_id.3  pip_import.3  pip_init.3  pip_is_initialized.3  pip_is_shared_fd.3  pip_is_threaded.3  (+20 more)
doc/man/man7/: libpip.7  md_README-html.7  md_doc_README-man.7  md_doc_README_man.7
doc/tutorial/prgs/: Makefile
examples/: Makefile  export.c  hello.c
gdbif/: Makefile  pip_gdbif.c  pip_readelf.c
include/pip/: Makefile  build-header.sh  concat.c  pip.h  pip_blt.h  pip_clone.h  pip_common.h  pip_config.h.in  pip_context.h  pip_debug.h  pip_dlfcn.h  pip_gdbif.h  pip_gdbif_enums.h  pip_gdbif_func.h  pip_internal.h  pip_libc_tab.h  pip_list.h  pip_machdep.h  pip_machdep_aarch64.h  pip_machdep_x86_64.h  pip_signal.h  pip_util.h  xpmem.h
lib/: Makefile  ldpip.c  pip.c  pip_2_backport.c  pip_blt.c  pip_boot.c  pip_clone.c  pip_context.c  pip_dlfcn.c  pip_elf.c  pip_errname.c  pip_gdb.c  pip_gdbif.c  pip_got.c  pip_init.c  pip_main.c  pip_malloc.c  pip_mesg.c  pip_namexp.c  pip_onstart.c  pip_preload.c  pip_signal.c  pip_spawn.c  pip_start.c  pip_sync.c  pip_task.c  pip_util.c  pip_wait.c  pip_wrapper.c  xpmem.c
package/docker/: Dockerfile  install.sh
package/docker/centos7/: Dockerfile
package/docker/centos8/: Dockerfile
package/redhat/: make-spec.sh.in  process-in-process-release.spec  process-in-process.spec  process-in-process.spec.in
preload/: Makefile
release/: keywords.conf
